tests for user with sms settings disabled